# client_oauth_demo

./: Cargo.toml
src/: config.rs  main.rs
src/providers/: discord.rs  github.rs  google.rs  mod.rs
